--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "express": "^4.18.2",
     "morgan": "^1.10.0",
     "mysql2": "^3.2.3",
-    "sequelize": "^6.31.0"
+    "sequelize": "^6.31.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.2"
   }
 }
